--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </ul>
   </nav>
   <a href="#" class="cart-button">Your Cart</a>
-  <div class="showcase"></div>
+  <div class="showcase container-fluid"></div>
   <div class="container">
     <h3 class="text-center mt-5 heading">Products</h3>
     <div class="card card-body mt-4">
@@ -39,7 +39,6 @@
     <div class="modal-content">
       <div class="modal-header">
         <h5 class="modal-title" id="prodModalLongTitle"></h5>
-        
       </div>
       <div class="modal-body">
         <div class="modal-content">
@@ -57,12 +56,10 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-primary" >Add to cart</button>
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        
       </div>
     </div>
   </div>
 </div>
-
 
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
